# safe_filesystem_snapshot

./: .gitignore  README.md  output.json  pyproject.toml  python_study.py  snapshot_1.json  snapshot_2.json  snapshot_3.json  snapshot_v1.json  snapshot_v2.json  snapshot_v3.json
src/safe_fs_snapshot/: cli.py  diff.py  scratch.py  snapshot.py  storage.py
src/safe_fs_snapshot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_data/: new_file.txt  notes.txt
test_data/config/: settings.json
test_data/docs/: changelog.txt  readme.txt
test_data/src/: utils.py
