[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-fs-snapshot"
version = "0.1.0"
description = "Read-only filesystem manifest and diff tool."
requires-python = ">=3.11"

# No dependencies yet (we will add later if needed)
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
